# gnome-builder-plugin-goide

./: gobject-ide-extensions.plugin  goide-new-class-diag.c  goide-new-class-diag.h  goide-new_class.py  goide-tree-addin.c  goide-tree-addin.h  goide.c  goide.gresource.xml  goide.py  meson.build
gtk/: factory_class_template.ui  menus.ui  new_class.ui
